# devdock

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
.omc/: project-memory.json
.omc/sessions/: 8e631e40-85ae-4704-9c8f-302f2eb07060.json  c137a7ff-48af-470d-91ff-64bc43ed6915.json
.omc/state/: agent-replay-067ccbf0-1031-4c1b-9e30-9c9dc97998cb.jsonl  last-tool-error.json  subagent-tracking.json
.omc/state/sessions/067ccbf0-1031-4c1b-9e30-9c9dc97998cb/: session-started.json
public/: app.js  index.html  style.css
public/js/: ansi.js  api.js  context-menu.js  dashboard.js  dialog.js  dom.js  logs.js  settings.js  state.js  toast.js
scripts/: sync-version.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  process.rs  types.rs  util.rs
