[package]
name = "onerun"
version = "0.7.0"
description = "A lightweight desktop app to manage all your dev servers in one place"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.3", features = ["tray-icon", "image-ico"] }
tauri-plugin-dialog = "2"
tauri-plugin-autostart = { version = "2", features = [] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_System_JobObjects", "Win32_Foundation"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
